<resources>
    <string name="app_name">40_郑远航</string>
    <string name="action_search">搜索</string>
    <string name="action_share">分享</string>
    <string name="action_favorites">收藏</string>
    <string name="action_settings">设置</string>
    <string name="night">夜间模式</string>
    <string name="no_image">无图模式</string>
    <string name="voice">语音播报新闻</string>
    <string name="category_manage">分类标签管理</string>
    <string name="empty_category_title">提示</string>
    <string name="empty_category">请至少选择一个分类。</string>
    <string name="warning">警告</string>
    <string name="warning_reset">此操作会删除所有个人设置、收藏和缓存。确定要进行此操作？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="reset_all">全部重置</string>
    <string name="list_connection_failed">网络连接失败</string>
    <string name="no_more_result">没有更多了</string>
    <string name="title_activity_news">新闻正文</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="delete_favorite_item">已删除</string>
    <string name="add_favorite_item">已添加</string>
    <string name="voice_is_off">您尚未开启语音播报功能</string>
    <string name="void_page_share">当前页面为空，无法分享</string>
    <string name="void_page_favorite">当前页面为空，无法收藏</string>
    <string name="void_page_tts">当前页面为空，无法朗读</string>
</resources>
